RESOLVED FIXED50181
CSS style declarations don't GC protect parents
https://bugs.webkit.org/show_bug.cgi?id=50181
Summary CSS style declarations don't GC protect parents
Alexey Proskuryakov
Reported 2010-11-29 14:05:46 PST
They should.
Attachments
proposed fix (4.05 KB, patch)
2010-11-29 14:12 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-11-29 14:12:24 PST
Created attachment 75058 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-11-30 16:21:33 PST
Note You need to log in before you can comment on or make changes to this bug.