        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=50181
        CSS style declarations don't GC protect parents

        Test: fast/dom/StyleSheet/gc-declaration-parent-rule.html

        * bindings/js/JSCSSStyleDeclarationCustom.cpp: (WebCore::JSCSSStyleDeclaration::markChildren):
        Protect the parent rule.



Canonical link: https://commits.webkit.org/63292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72833 268f45cc-cd09-0410-ab3c-d52691b4dbfc